# soundtouch-jni

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  gradlew  settings.gradle
.github/workflows/: cmake-linux-amd64.yml  cmake-linux-i386.yml  cmake-macos-arm64.yml  cmake-macos-x86_64.yml  cmake-windows-aarch64.yml  cmake-windows-x86.yml  cmake-windows-x86_64.yml  gradle-publish.yml
android/: build.gradle
android/src/androidTest/java/com/tianscar/soundtouch/: ExampleInstrumentedTest.java  LoadLibraryInstrumentedTest.java
android/src/androidTest/java/com/tianscar/soundtouch/test/: LoadLibraryInstrumentedTest.java
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  soundtouch4j.cpp
android/src/main/cpp/SoundTouch/: SoundTouchDLL.cpp
android/src/main/java/com/tianscar/soundtouch4j/: NativeLib.java
android/src/test/java/com/tianscar/soundtouch/: ExampleUnitTest.java
core/: build.gradle
core/src/main/cpp/: SoundTouchDLL.hpp  bpmdetectorjni.c  bpmdetectorjni.cpp  com_tianscar_soundtouch4j_BPMDetector.h  com_tianscar_soundtouch4j_SoundTouch.h  com_tianscar_soundtouch_BPMDetector.h  com_tianscar_soundtouch_SoundTouch.h  com_tianscar_soundtouchjni_BPMDetector.h  com_tianscar_soundtouchjni_SoundTouch.h  soundtouchjni.c  soundtouchjni.cpp
core/src/main/java/com/tianscar/soundtouch/: BPMDetector.java  SoundTouch.java  Util.java
core/src/main/java/com/tianscar/soundtouch4j/: BPMDetector.java  SoundTouch.java  Util.java
core/src/main/java/com/tianscar/soundtouchjni/: BPMDetector.java  SoundTouch.java  Util.java
docs/: allclasses-index.html  allclasses-noframe.html  allpackages-index.html  constant-values.html  element-list  help-doc.html  index.html  member-search-index.js  overview-tree.html  package-search-index.js  type-search-index.js
docs/com/tianscar/soundtouch4android/: SoundTouch.html  package-summary.html  package-tree.html
docs/com/tianscar/soundtouch4j/: BPMDetector.html  SoundTouch.html  package-summary.html  package-tree.html
docs/com/tianscar/soundtouchjni/: BPMDetector.html  SoundTouch.html  package-summary.html  package-tree.html
docs/index-files/: index-1.html  index-10.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
docs/soundtouch-jni/: allclasses-index.html  allpackages-index.html  constant-values.html  element-list  help-doc.html  index.html  member-search-index.js  overview-tree.html  package-search-index.js  type-search-index.js
docs/soundtouch-jni/com/tianscar/soundtouch/: BPMDetector.html  SoundTouch.html  package-summary.html  package-tree.html
docs/soundtouch-jni/com/tianscar/soundtouchjni/: BPMDetector.html  SoundTouch.html  package-summary.html  package-tree.html
docs/soundtouch-jni/index-files/: index-1.html  index-10.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
gradle/wrapper/: gradle-wrapper.properties
j2se/: build.gradle
j2se/src/main/cpp/: CMakeLists.txt
j2se/src/main/cpp/libs/windows-aarch64/: SoundTouch.lib
j2se/src/main/cpp/libs/windows-x86/: SoundTouch.lib  SoundTouchDLL.lib
j2se/src/main/cpp/libs/windows-x86_64/: SoundTouch.lib
j2se/src/main/resources/macos-arm64/: libsoundtouchjni.dylib
j2se/src/main/resources/macos-x86_64/: libSoundTouchDLL.dylib  libsoundtouchjni.dylib
j2se/src/main/resources/windows-aarch64/: SoundTouchDLL.dll.lib
j2se/src/main/resources/windows-x86_64/: SoundTouchDLL.lib
j2se/src/test/java/com/tianscar/soundtouch4j/test/: J2SETest.java
j2se/src/test/java/com/tianscar/soundtouchjni/test/: J2SETest.java
javaDocs/: allclasses-frame.html  deprecated-list.html  help-doc.html  index.html  overview-tree.html  package-list
javaDocs/com/tianscar/soundtouch4android/: SoundTouch.html  package-frame.html
javaDocs/index-files/: index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-7.html  index-8.html
javase/src/main/cpp/: CMakeLists.txt
javase/src/main/resources/macos-arm64/: libSoundTouchDLL.dylib  libsoundtouchjni.dylib
javase/src/main/resources/macos-x86_64/: libSoundTouchDLL.dylib  libsoundtouchjni.dylib
javase/src/main/resources/windows-aarch64/: SoundTouchDLL.lib
javase/src/main/resources/windows-x86/: SoundTouchDLL.lib
javase/src/main/resources/windows-x86_64/: SoundTouchDLL.lib
javase/src/test/java/com/tianscar/soundtouch/test/: LoadLibrariesAndRunTest.java  LoadlibraryTest.java
module/: build.gradle
module/aar/: module-release.aar
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt  com_tianscar_soundtouch4android_SoundTouch.h  soundtouch-jni.cpp
module/src/main/cpp/jni/: com_tianscar_soundtouch4android_SoundTouch.h  soundtouch-jni.cpp
module/src/main/cpp/lib/: STTypes.h  SoundTouch-README.md  cpu_detect_x86.cpp
module/src/main/cpp/soundtouch/: STTypes.h
module/src/main/java/com/tianscar/soundtouch4android/: SoundTouch.java
